# MAHI

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_CHANGELOG.md  LICENSE  README.md  RELEASE_PROGRESS.md  RELEASE_RUNBOOK.md  package-lock.json  package.json  vite.config.ts
docs/: WINDOW_VISION_ARCHITECTURE.md  local-ai-stack.config.json
src/: App.css  App.tsx  ErrorBoundary.tsx  agent.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  mahi-updater.key.pub  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: microphone_bridge.h  microphone_bridge.m  window_vision_bridge.h  window_vision_bridge.m
src-tauri/scripts/: build-macos-distribution.sh  create-local-signing-identity.sh  fix-native-libs.sh  notarize-macos.sh
src-tauri/src/: asr.rs  browser.rs  checkpoint.rs  external_tools.rs  lib.rs  library.rs  llm.rs  main.rs  mcp.rs  mcp_servers.rs  media.rs  microphone.rs  models.rs  pty.rs  screenshot.rs  sessions.rs  tts.rs  watcher.rs
src-tauri/src/window_vision/: commands.rs  manager.rs  mod.rs  platform_macos.rs  platform_stub.rs  types.rs
src/assets/: fish-done.m4a
src/components/: ApprovalModal.tsx  CodeBlock.tsx  DiffView.tsx  FileTree.tsx  Message.tsx  SettingsModal.tsx  ToolCallView.tsx
src/ide/: BrowserTabView.tsx  ChatPanel.tsx  CommandPalette.tsx  EditorArea.tsx  ExternalToolsModal.tsx  FishLoader.tsx  LibraryModal.tsx  ModelsModal.tsx  ProjectSettingsModal.tsx  PromptLabModal.tsx  ProvidersModal.tsx  SearchPanel.tsx  TerminalPanel.tsx  UsagePanel.tsx  fileOps.ts  (+26 more)
(+6 files in other folders)
