[package]
name = "vibe-coder"
version = "1.3.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
portable-pty = "0.9.0"
regex = "1.12.4"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
base64 = "0.22"
xcap = "0.9.6"
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
futures-util = "0.3"
whisper-rs = { version = "0.16", features = ["metal"] }
sherpa-rs = { version = "0.6", features = ["tts"] }
hound = "3"
notify = "8"
notify-debouncer-mini = "0.7"
libc = "0.2"
tokio = { version = "1", features = ["rt", "time", "process"] }

